bug 45055 - align row heights on pixel boundaries when distributing extra space vertically. Work around block bug by rounding cells to even pixel boundary. sr=attinasi, r=bernd.mielke@snafu.de